--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -88,7 +88,10 @@
     text-align: center;
     padding: 40px 0;
     margin: 0 auto;
+}
 
+.home-products h2 {
+    margin: 16px 0;
 }
 
 .home-container-products {
@@ -107,7 +110,7 @@
     .home-icons {
         flex-direction: column;
         height: fit-content;
-        gap: 2rem;
+        gap: 1rem;
         margin: 20px 0;
     }
 
