--- a/src/styles/pages/productDetail.css
+++ b/src/styles/pages/productDetail.css
@@ -404,6 +404,20 @@
     color: #000;
 }
 
+.buy-product-info {
+    background: #dbdbdb;
+    border-radius: 5px;
+    padding: 15px;
+    max-width: 400px;
+    border-left: 5px solid #ff4b4b;
+}
+
+.buy-product-info p {
+    font-size: 12px;
+    font-weight: 600;
+    color: #333;
+}
+
 .buy-product-detail {
     cursor: default;
 }
