--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -123,11 +123,21 @@
     }
 
     .home-categories {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         padding: 0 10px;
         gap: 0.5rem;
     }
 
+    .category {
+        height: 300px;
+    }
+
     .category-image p {
         font-size: 20px;
+        top: 130px;
+        bottom: 0;
     }
 }
